# os-in-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  boot.s  grub.cfg  kernel.c  linker.ld
Headers/: KernelException.hpp  VgaBuffer.hpp  idt.h  idt.hpp  interrupts.h  interrupts.hpp  macros.h  utils.hpp  vga_buffer.hpp
Headers/Arch/: InterruptDescriptorTable.hpp
Headers/Arch/InterruptServiceRoutine/: InterruptServiceRoutineDefenitions.hpp  InterruptServiceRoutineEntries.hpp  InterruptServiceRoutineInitializer.hpp
Headers/Interrupts/: InterruptsDescriptorTable.hpp  idt.hpp  interrupts.hpp
Headers/Interrupts/InterruptHandlersGenerator/: InterruptHandlersGenerator.hpp
Headers/OsDefenitions/: ProcessorRegisterSet.hpp
Headers/OsDefinitions/: TypeTraits.hpp  stddef.h
Headers/Utils/: Macros.hpp  Pair.hpp  Pointer.hpp  Span.hpp  Vector.hpp  utils.hpp
Headers/Utils/Functions/: HexUtils.hpp  MemoryUtils.hpp  PrintUtils.hpp  StringsUtils.hpp  memory.hpp  memoryUtils.hpp  print.hpp  strings.hpp
Headers/Utils/Functions/Strings/: itoa.h  strlen.h
Headers/arch/: InterruptDescriptorTable.hpp  InterruptServiceRoutineDefenitions.hpp  OsDefinitions.hpp
Headers/arch/InterruptServiceRoutine/: InterruptServiceRoutineDefenitions.hpp  InterruptServiceRoutineEntries.hpp
Sources/: Kernel.cpp  KernelException.cpp  VgaBuffer.cpp  boot.s  kernel.c  kernel.cpp  utils.c  utils.cpp  vga_buffer.c  vga_buffer.cpp
Sources/Arch/interrupts/: InterruptDescriptorTable.cpp  InterruptServiceRoutineEntries.cpp  InterruptServiceRoutineInitializer.cpp  interruptServiceRoutineInitializer.cpp  interrupts.asm
Sources/Boot/: boot.asm  multiboot_header.asm
Sources/Interrupts/: InterruotsDescriptorTable.asm  InterruptsDescriptorTable.cpp  idt.cpp  interrupts.cpp
Sources/Interrupts/InterruptHandlersGenerator/: InterruptHandlersGenerator.asm  InterruptHandlersGenerator.cpp
Sources/Runtime/: CxaGuardStubs.cpp
Sources/Utils/: Pair.cpp  Span.cpp  StringsUtils.cpp  Vector.cpp
Sources/Utils/Functions/: MemoryUtils.cpp  PrintUtils.cpp
Sources/arch/: exceptions.cpp
Sources/arch/interrupts/: InterruptDescriptorTable.cpp  InterruptServiceRoutine.cpp  InterruptServiceRoutineEntries.cpp  idt.asm  idt.c  idt.cpp  idt.s  interrupts.asm  interrupts.c  interrupts.cpp
Sources/asm/: boot.asm
Sources/boot/: boot.asm  long_mode_init.asm  multiboot_header.asm
inc/: utils.h  vga_buffer.h
src/: kernel.c  kernel.cpp  utils.c  vga_buffer.c
src/vga_buffer/: vga_buffer.c  vga_buffer.h
